# speedwagon

./: .env.example  Cargo.toml  README.org  diesel.toml  docker-compose.yml  rustfmt.toml
migrations/2020-07-29-024021_users/: down.sql  up.sql
src/: db.rs  fetch.rs  lib.rs  logger.rs  main.rs  schema.rs  setup_rocket.rs  sources.rs  speedwagon.rs  state.rs  timestamp.rs
src/api/: v1.rs
src/api/v1/: items.rs  sources.rs  users.rs
src/db/: articles.rs  sources.rs  tagged_sources.rs  tags.rs  tokens.rs  users.rs
src/sources/: rssatom.rs
src/speedwagon/: db.rs  schema.rs
src/speedwagon/api/v1/: items.rs  users.rs
src/speedwagon/db/: articles.rs  sources.rs  tokens.rs  users.rs
test_data/: test_rss.xml
