[package]
name = "speedwagon"
version = "0.1.0"
authors = ["Josh Bicking <jbicking@datto.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rss = "1.9.0"
atom_syndication = "0.9.0"
reqwest = { version = "0.10.6", features = ["blocking"] }
log = "0.4.11"
fern = "0.6.0"
chrono = "0.4.13"
serde = {version = "1.0.114", features = ["derive"]}
serde_derive = "1.0.114"
serde_json = "1.0.56"
time = "0.1.43" # Update this whenever rocket updates
uuid = { version = "0.8.1", features = ["v4", "serde"]}
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
bcrypt = "0.8"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "diesel_postgres_pool"]