[package]
name = "speedwagon"
version = "0.1.0"
authors = ["Josh Bicking <jbicking@datto.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atom_syndication = { version = "0.9.0", features = ["with-serde"] }
bcrypt = "0.8"
chrono = "0.4.13"
clokwerk = "0.3.3"
diesel = { version = "1.4.5", features = ["postgres", "deprecated-time", "uuidv07", "serde_json"] }
dotenv = "0.15.0"
fern = "0.6.0"
log = "0.4.11"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
rfc822_sanitizer = "0.3.2"
reqwest = { version = "0.10.7", features = ["blocking"] }
rocket = "0.4.5"
rss = { version = "1.9.0", features = ["serde"] }
serde = {version = "1.0.114", features = ["derive"]}
serde_derive = "1.0.114"
serde_json = "1.0.57"
time = "0.1.43" # Update this whenever rocket updates
uuid = { version = "0.8.1", features = ["v4", "serde"]}

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "diesel_postgres_pool"]
